# d2cc

./: Makefile.am  README.rst  configure.ac
doc/: protocol.rst
src/d2ccd/: d2ccd.cxx
src/libd2cc/: protocol.cxx  protocol.h  serialization.h  unixclient.cxx  unixclient.h
src/toolchain/: gcc.cxx
